install/kubernetes/deploy-schedule.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-schedule
  namespace: infra
  labels:
    app: myapp-schedule

spec:
  replicas: 1   # 只能是一个
  selector:
    matchLabels:
      app: myapp-schedule
  template:
    metadata:
      name: myapp-schedule
      labels:
        app: myapp-schedule
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: myapp
                operator: In
                values:
                - "true"
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
        - name: myapp-configs
          configMap:
            name: myapp-configmap
            items:
              - key: config.py
                path: config.py
              - key: entrypoint.sh
                path: entrypoint.sh

      # hostNetwork: true   # 使用主机网络，要保障本机l5可用    
      containers:
        - name: myapp-schedule
          image: tencentmusic/myapp:2020.10.01
          imagePullPolicy: IfNotPresent
          command: ["bash","-c",'celery beat --loglevel=info --app=myapp.tasks.celery_app:celery_app']    # 如果修改了entrypoint
          resources:       
            limits:
              cpu: 6
              memory: 6Gi
            requests:
              cpu: 10m
              memory: 100Mi
          volumeMounts:
            - name: myapp-configs
              mountPath: /home/myapp/myapp/config.py
              subPath: config.py
            - name: myapp-configs
              mountPath: /entrypoint.sh
              subPath: entrypoint.sh
            - name: tz-config
              mountPath: /etc/localtime
