install/kubernetes/service.yaml
# encoding: utf-8
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: infra
  labels:
    app: myapp
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: myapp
