install/kubernetes/ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: infra-myapp
  namespace: infra
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  rules:
  - host: xx.xx.xx.com
    http:
      paths:
      - path: /
        backend:
          serviceName: myapp
          servicePort: 80
